# house

./: .gitignore  README.md  start-home-assistant.sh
gcmb/: README.md
gcmb/battery/: README.md
gcmb/inverters/: README.md
gcmb/total_dc_power/: README.md
query-data/: main.py  pyproject.toml
