[tool.poetry]
name = "query-data"
version = "0.1.0"
description = ""
authors = ["Stefan Hudelmaier <stefan.hudelmaier@device-insight.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysungrow = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
